--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -4,6 +4,23 @@
 
 .navbar-brand {
     font-family: 'Berkshire Swash', cursive;
+    font-size: 25px ;
+}
+
+a.nav-link {
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
+#wallpaper {
+    position: fixed;
+    height: auto;
+    width: fit-content;
+    backdrop ;
+}
+
+.text-center {
+    text-emphasis: center;
 }
 
 .container {
