--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -18,11 +18,16 @@
     justify-content: flex-end;
 }
 
-.footer {
-    padding: 10px;
-    margin-bottom: 0;
-    background-color: grey;
+.jumbotron {
+    padding: auto;
     position: relative;
+}
+
+.footer {
+    width:100%;
+    bottom: 0;
+    background-color: rgb(53, 53, 53);
+    position: absolute;
 }
 
 .text-center text-muted {
