--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -13,7 +13,6 @@
     font-size: 25px ;
 }
 
-
 #navbarNav {
     flex-direction: row;
     justify-content: flex-end;
@@ -22,6 +21,11 @@
 .jumbotron {
     padding: auto;
     position: relative;
+}
+
+.img-fluid {
+    max-width: 100%;
+    height: auto;
 }
 
 .footer {
