resized about me section image and removed code redundancies

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -31,16 +31,12 @@ body {
     position: relative;
 }
 
-.input  {
-    flex
-}
-
 .img-responsive {
     max-width: 50%;
-    height: 50%;
-    width: 50%;
+    height: auto;
+    width: auto;
     float: left;
-    margin: 20px 10px;
+    margin-right: 10px;
 }
 
 .footer {
