--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -18,7 +18,8 @@ body {
 }
 
 .navbar-brand {
-    font-family: 'Berkshire Swash', cursive;
+    font-family: 'Cinzel Decorative', cursive;
+    font-weight: 700;
     font-size: 25px ;
 }
 
@@ -30,6 +31,11 @@ body {
 .container {
     /* max-width: 50%; */
     margin: 10px;
+    margin-right: auto;
+}
+
+.flex-container {
+
 }
 
 .jumbotron {
@@ -37,6 +43,13 @@ body {
     padding-top: 10px;
     padding-bottom: 10px;
     position: relative;
+}
+
+.display-4 {
+    font-family: 'Cinzel Decorative', cursive;
+    font-size: xx-large;
+    font-weight: 500;
+    /* margin-bottom: 10px; */
 }
 
 input {
@@ -58,6 +71,11 @@ input {
     width: auto;
     padding: 0;
     margin-bottom: 10px;
+}
+
+
+.btn {
+    background-color: darkred;
 }
 
 .footer {
