corrected wrapping code in portfolio.html file

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -30,6 +30,7 @@ body {
 
 .container {
     /* max-width: 50%; */
+    /* background-color: white; */
     margin: 10px;
     margin-right: auto;
 }
