added github and linkedin hyperlinks to contact page

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -54,6 +54,10 @@ input {
     /* width: fit-content; */
 }
 
+.socials {
+    padding: 20px;
+}
+
 .img-responsive {
     max-width: 50%;
     height: auto;
