--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -3,27 +3,29 @@
     color:white;
 }
 
- /* adds background url and makes it fit to page
-body {
-    
-} */
+ /* adds background url and makes it fit to page */
+body { 
+    background-image: url("https://images.unsplash.com/photo-1440688807730-73e4e2169fb8?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80");
+    background-size: cover; 
+    background-repeat: no-repeat;
+    min-height: 100vh;
+    width: 95vw;
+    margin: 0;
+    padding: 0;
+}
 
  /* sets wallpaper position and sizing */
 .wallpaper {
-    position: fixed;
-    width: 100%;
-    background-size: 100%;  
-    background-image: url("https://images.unsplash.com/photo-1440688807730-73e4e2169fb8?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80");
-    background-repeat: no-repeat;
-    min-height: 100vh;  
+    /* position: relative; */
+    /* width: 100%;
+    height: 100%; */
 }
-
 
 /* adds google font styling to logo name */
 .navbar-brand {
     font-family: 'Cinzel Decorative', cursive;
     font-weight: 700;
-    font-size: 25px ;
+    font-size: 25px;
 }
 
 .nav-link {
@@ -31,9 +33,10 @@ color: white;
 }
 
 .navbar {
+    width: 100vw;
     background-color:rgb(36, 36, 36);
     border-style: solid;
-    border-bottom-color:rgb(124, 155, 133);
+    border-bottom-color: rgb(124, 155, 133);
 }
 
 /* makes navbar stay relative to screen resolution */
@@ -42,20 +45,36 @@ color: white;
     justify-content: flex-end;
 }
 
+.active {
+    background-color:rgb(124, 155, 133);
+    border-radius: 1rem;
+}
+
 /* applies margin parameters for container class */
 .container {
-    margin: 10px;
-    /* margin-right: auto; */
+    /* margin: 10px; */
+    margin-right: 30%;
+    margin-left: 30%;
+    margin-top: 8%;
+    /* display: flex; */
+    position: relative;
+    justify-content: center;
+    align-items: center;
 }
 
 /* applies styling elements and gives a relative position */
 .jumbotron {
-    margin-top: 30px;
+    margin-top: 6%;
     padding-top: 10px;
     padding-bottom: 10px;
-    /* position: relative; */
-    justify-content: center;
-    align-items: center;
+}
+
+#portfolio {
+    margin-top: 10%;
+    margin-right: 22%;
+    margin-left: 28%;
+    max-width: 50%;
+    min-height: 80%;
 }
 
 /* adds google font styling to jumbotron header for each page */
@@ -102,7 +121,7 @@ input {
 
 /* applies styling properties to footer and fixes it's position*/
 .footer {
-    width:100%;
+    width: 100%;
     bottom: 0;
     background-color: rgb(36, 36, 36);
     border-style: solid;
@@ -113,4 +132,16 @@ input {
 /* aligns copyright text to center */
 .text-center text-muted {
     text-align: center;
+}
+
+@media screen and (max-width: 400px) {
+    .navbar-brand {
+        font-size: 20px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .display-4 {
+        font-size: 20px;
+    }
 }
