updated resume file

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -73,7 +73,7 @@ color: white;
     margin-top: 10%;
     margin-right: 22%;
     margin-left: 28%;
-    max-width: 50%;
+    /* max-width: 50%; */
     min-height: 80%;
 }
 
