--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -17,8 +17,8 @@ body {
  /* sets wallpaper position and sizing */
 .wallpaper {
     /* position: relative; */
-    /* width: 100%;
-    height: 100%; */
+    /* width: 100%; */
+    /* height: 100%; */
 }
 
 /* adds google font styling to logo name */
@@ -40,10 +40,10 @@ color: white;
 }
 
 /* makes navbar stay relative to screen resolution */
-#navbarNav {
+/* #navbarNav {
     flex-direction: row;
     justify-content: flex-end;
-}
+} */
 
 .active {
     background-color:rgb(124, 155, 133);
@@ -67,14 +67,24 @@ color: white;
     margin-top: 6%;
     padding-top: 10px;
     padding-bottom: 10px;
+    margin-right: 22%;
 }
 
 #portfolio {
-    margin-top: 10%;
-    margin-right: 22%;
-    margin-left: 28%;
-    /* max-width: 50%; */
+    margin-right: 12%;
+    margin-left: 14%;
+    margin-bottom: 10%;
     min-height: 80%;
+}
+
+#about {
+    margin-right: 2%;
+    /* margin-left: 14%; */
+    margin-bottom: 10%;
+}
+
+.h3 {
+    text-align: center;
 }
 
 /* adds google font styling to jumbotron header for each page */
@@ -143,5 +153,13 @@ input {
 @media screen and (max-width: 400px) {
     .display-4 {
         font-size: 20px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .container {
+        width: 100vw;
+        margin: auto 0;
+        float: none;
     }
 }
