--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -14,13 +14,6 @@ body {
     padding: 0;
 }
 
- /* sets wallpaper position and sizing */
-.wallpaper {
-    /* position: relative; */
-    /* width: 100%; */
-    /* height: 100%; */
-}
-
 /* adds google font styling to logo name */
 .navbar-brand {
     font-family: 'Cinzel Decorative', cursive;
@@ -40,10 +33,10 @@ color: white;
 }
 
 /* makes navbar stay relative to screen resolution */
-/* #navbarNav {
+#navbarNav {
     flex-direction: row;
     justify-content: flex-end;
-} */
+}
 
 .active {
     background-color:rgb(124, 155, 133);
