--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -22,7 +22,7 @@ body {
 }
 
 .nav-link {
-color: white;
+    color: white;
 }
 
 .navbar {
@@ -61,6 +61,19 @@ color: white;
     padding-top: 10px;
     padding-bottom: 10px;
     margin-right: 22%;
+}
+
+.portfolioText {
+    text-align: center;
+}
+
+.soThirsty {
+    max-width: 100%;
+}
+
+.img-caption {
+    font-family: 'Marcellus SC', serif;
+    text-align: center;
 }
 
 #portfolio {
