--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -23,6 +23,7 @@ body {
 
 .nav-link {
     color: white;
+    font-family: 'Overlock SC', cursive;
 }
 
 .navbar {
@@ -45,11 +46,9 @@ body {
 
 /* applies margin parameters for container class */
 .container {
-    /* margin: 10px; */
     margin-right: 30%;
     margin-left: 30%;
     margin-top: 8%;
-    /* display: flex; */
     position: relative;
     justify-content: center;
     align-items: center;
@@ -57,10 +56,11 @@ body {
 
 /* applies styling elements and gives a relative position */
 .jumbotron {
+    justify-content: center;
     margin-top: 6%;
     padding-top: 10px;
     padding-bottom: 10px;
-    margin-right: 22%;
+    margin-right: 30%;
 }
 
 .portfolioText {
@@ -78,14 +78,14 @@ body {
 
 #portfolio {
     margin-right: 12%;
-    margin-left: 14%;
+    margin-left: 16%;
     margin-bottom: 10%;
     min-height: 80%;
 }
 
 #about {
     margin-right: 2%;
-    /* margin-left: 14%; */
+    margin-left: 2%;
     margin-bottom: 10%;
 }
 
