updating styling to jumbotron class

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -57,10 +57,12 @@ body {
 /* applies styling elements and gives a relative position */
 .jumbotron {
     justify-content: center;
+    background: linear-gradient(rgb(124, 155, 133), rgb(36, 36, 36));
     margin-top: 6%;
     padding-top: 10px;
     padding-bottom: 10px;
     margin-right: 30%;
+    color: white;
 }
 
 .portfolioText {
